--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -5,5 +5,8 @@
         <!-- 로컬 테스트용 도메인/IP -->
         <domain includeSubdomains="true">lumi.pe.kr</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
+        <domain includeSubdomains="true">127.0.0.1</domain>
+        <domain includeSubdomains="true">0.0.0.0</domain>
+        <domain includeSubdomains="true">192.168.188.62</domain>
     </domain-config>
 </network-security-config>
